<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="?android:customNavigationLayout"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:textSize="14dp"
            android:paddingTop="35dp"
            android:text="@string/bottm_sheet_username"
            android:textColor="@color/colorText" />
    </FrameLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line_view"
        android:background="@color/colorPrimary"
        android:layout_margin="15dp"/>


 <LinearLayout
     android:layout_width="match_parent"
     android:id="@+id/llcontent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginTop="20dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:fontFamily="@font/work_sans_semibold">

    <TextView
        android:id="@+id/my_lib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_outline_local_library_24px"
        android:text="@string/bootm_sheet_my_library"
        android:textSize="16dp"
        android:background="?attr/selectableItemBackground"
        android:drawableTint="@color/colorAccent"
        android:drawablePadding="10dp"
        android:textColor="@color/colorAccent" />

     <TextView
         android:id="@+id/language"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textSize="16dp"
         android:drawableLeft="@drawable/ic_baseline_language_24px"
         android:drawableTint="@color/colorAccent"
         android:text="@string/bottom_sheet_language"
         android:background="?attr/selectableItemBackground"
         android:drawablePadding="10dp"
         android:textColor="@color/colorAccent" />

     <TextView
         android:id="@+id/help"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textSize="16dp"
         android:drawableTint="@color/colorAccent"
         android:drawableLeft="@drawable/ic_baseline_help_outline_24px"
         android:text="@string/bottom_sheet_help"
         android:background="?attr/selectableItemBackground"
         android:drawablePadding="10dp"
         android:textColor="@color/colorAccent" />

     <TextView
         android:id="@+id/about_us"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textSize="16dp"
         android:drawableTint="@color/colorAccent"
         android:drawableLeft="@drawable/ic_outline_error_outline_24px"
         android:background="?attr/selectableItemBackground"
         android:text="@string/bootm_sheet_about_us"
         android:drawablePadding="10dp"
         android:textColor="@color/colorAccent" />
    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorAccent"
        android:drawableLeft="@drawable/ic_outline_settings_24px"
        android:background="?attr/selectableItemBackground"
        android:text="@string/bootm_sheet_settings"
        android:textSize="16dp"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorAccent"
        android:drawableLeft="@drawable/ic_outline_account_circle_24px"
        android:background="?attr/selectableItemBackground"
        android:text="@string/bootm_sheet_logout"
        android:textSize="16dp"
        android:textColor="@color/colorAccent" />



 </LinearLayout>

</LinearLayout>