<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="listener"
            type="corp.king.booksapp.presentation.listeners.StartPageListener"/>
    </data>
    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@drawable/start_page"
        tools:context=".presentation.views.StartActivity">

        <ImageView
            android:contentDescription="@string/content_descriptor"
            android:id="@+id/my_logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_logo_starting_page"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/get_start"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/register"
            android:background="@drawable/btn_background_solid"
            android:layout_below="@+id/my_logo"
            android:text="@string/get_start_btn"
            android:textSize="24sp"
            android:fontFamily="@font/work_sans_semibold"
            android:textColor="@color/btn_color"
            android:onClick="@{listener::onGetStartedClicked}"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/btn_background_stroke"
            android:fontFamily="@font/work_sans_regular"
            android:text="@string/registration_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:onClick="@{listener::onRegistrationClicked}"/>

    </android.support.constraint.ConstraintLayout>
</layout>
